Defines domain and service layer structure

--- a/src/ProductSearchEngine.WebUI/Views/ProductSearch/Index.cshtml
+++ b/src/ProductSearchEngine.WebUI/Views/ProductSearch/Index.cshtml
@@ -24,7 +24,7 @@
         <div class="form-group">
             <label for="exampleInputEmail1">Product Description</label>
             <div class="col-8">
-                <input type="email" name="description" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                <input type="text" name="description" class="form-control" id="description"  placeholder="Description">
             </div>
         </div>
         <!-- 2 column grid layout for inline styling -->
