--- a/src/ProductSearchEngine.WebUI/Views/ProductSearch/Index.cshtml
+++ b/src/ProductSearchEngine.WebUI/Views/ProductSearch/Index.cshtml
@@ -1,26 +1,27 @@
-﻿@model IEnumerable< ProductSearchEngine.Domain.Eitities.Product>
+﻿@model IEnumerable<ProductSearchEngine.Domain.Eitities.Product>
 
-<form method="post">
+<form id="form" class="row g-3 needs-validation" novalidate method="post">
     <div class="d-grid gap-3">
         <div class="form-group">
             <label class="control-label col-md-2" for="categories">Product Category</label>
             <div class="col-8">
-                <select name="category" class="form-select" aria-label="Default select example">
-                    <option selected>Select the Product Category</option>
-                    <option value="1">Mobile</option>
-                    <option value="2">Refrigerator</option>
-                    <option value="3">Tv</option>
-                </select>
-            </div>
+                <div>
+                    @Html.DropDownList(
+                        "category",
+                        (IEnumerable<SelectListItem>)ViewBag.categories,
+                        "Select Category",new {@class="form-select",required = "required"}
+                    )
+                </div>
+            </div> 
         </div>
         <div class="form-group">
             <label class="control-label col-md-2" for="categories">Site</label>
             <div class="col-8">
-                <select name="site" class="form-select" aria-label="Default select example">
-                    <option selected>Select the Search Site</option>
-                    <option value="1">Mercado Livre</option>
-                    <option value="2">Buscapé</option>
-                </select>
+                 @Html.DropDownList(
+                    "site",
+                    (IEnumerable<SelectListItem>)ViewBag.sites,
+                    "Select Site",new {@class="form-select",required = "required"}
+                )
             </div>
         </div>
         <div class="form-group">
@@ -56,6 +57,12 @@
         <th>
             Description
         </th>
+        <th>
+            Price
+        </th>
+        <th>
+            Site
+        </th>
     </tr>
     @foreach (var item in Model)
     {
@@ -73,6 +80,33 @@
             <td>
                 @Html.Raw(item.Description)
             </td>
+             <td>
+                @Html.Raw(item.Price)
+            </td>
+             <td>
+                @Html.Raw(item.Sites[0].Name)
+            </td>
         </tr>
     }
 </table>
+<script>
+   (function () {
+  'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  var forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.prototype.slice.call(forms)
+    .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
+
+        form.classList.add('was-validated')
+      }, false)
+    })
+})()
+</script>
